--- a/src/components/Blog/blog.css
+++ b/src/components/Blog/blog.css
@@ -2,7 +2,6 @@
   display: block;
   height: 900px;
   overflow: hidden;
-  font-family: Poppins;
   position: relative;
   background: rgba(0, 0, 0, 0.6) url(../../assets/images/promo_slide_3.jpg);
   background-repeat: no-repeat;
@@ -10,22 +9,32 @@
   background-blend-mode: darken;
 }
 
+.con-6:after {
+  background: linear-gradient(-45deg, #ffffff 16px, transparent 0),
+    linear-gradient(45deg, #ffffff 16px, transparent 0);
+  background-position: left-bottom;
+  background-repeat: repeat-x;
+  background-size: 32px 32px;
+  content: " ";
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 32px;
+}
 
-.con-6 h1{
-    margin-top: 32px;
+.con-6 h1 {
+  margin-top: 32px;
 }
 
 .card {
   flex-basis: 33.33333%;
   width: 100%;
   height: 500px;
-  margin:150px;
+  margin: 150px;
 }
-.inner-card:hover {
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-     background: rgba(0, 0, 0, 0.4);
-     background-blend-mode: darken;
-}
+
 .inner-card {
   background-color: #fff;
 
@@ -59,7 +68,7 @@
 }
 .content span {
   float: right;
-  margin-right:20px;
+  margin-right: 20px;
 }
 .btn-wrapper {
   display: block;
@@ -69,13 +78,15 @@
   width: 70%;
   height: 40px;
   border: none;
-  background-color: steelblue;
+  background-color: rgb(224, 21, 21);
   color: #fff;
   font-size: 16px;
   cursor: pointer;
 }
 .view-btn:hover {
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 3px 6px rgba(223, 14, 14, 0.4);
+  background-color: #fff;
+  color: rgb(226, 17, 17);
 }
 
 .light-box {
