--- a/src/components/BookTable/book.css
+++ b/src/components/BookTable/book.css
@@ -1,7 +1,7 @@
 .con-3 {
   width: 100%;
   height: 300px;
-  background :rgba(0, 0, 0, 0.7)url(../../assets/images/promo_slide_1.jpg);
+  background :rgba(0, 0, 0, 0.9)url(../../assets/images/promo_slide_1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -9,17 +9,28 @@
   position: relative;
   align-items: center;
   justify-content: center;
-
   flex-direction: column;
   background-blend-mode: darken;
+}
 
+.con-3:after{
+   background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
+    background-position: left-bottom;
+    background-repeat: repeat-x;
+    background-size: 32px 32px;
+    content: " ";
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 25px;
 }
 
 
 .con-3 h1 {
   color: #fff;
   font-weight: bold;
-  font-family:Poppins;
 }
 .con-3 button {
   color: tomato;
@@ -28,7 +39,6 @@
   font-weight: bold;
   font-size: 20px;
   border: 1px solid tomato;
-  font-family:Poppins;
   cursor: pointer;
 }
 .con-3 button:hover {
