--- a/src/components/Carousels/carousel.css
+++ b/src/components/Carousels/carousel.css
@@ -1,34 +1,63 @@
+.con-8:after{
+   background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
+    background-position: left-bottom;
+    background-repeat: repeat-x;
+    background-size: 32px 32px;
+    content: " ";
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 32px;
+}
+
+
 .carousel-item {
-	height: 100vh;
-	min-height: 300px;
+  height: 100vh;
+  min-height: 300px;
 }
 .carousel-caption {
-	bottom: 220px;
+  bottom: 220px;
 }
 .carousel-caption h5 {
-	font-size: 45px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	margin-top: 25px;
-	font-family: merienda;
+  font-size: 55px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 25px;
+  font-family: merienda;
+}
+.carousel-caption h4 {
+  font-size: 37px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 25px;
+  font-family: merienda;
 }
 .carousel-caption p {
-	width: 60%;
-	margin: auto;
-	font-size: 18px;
-	line-height: 1.9;
-	font-family: poppins;
+  width: 60%;
+  margin: auto;
+  font-size: 18px;
+  line-height: 1.9;
+  font-family: poppins;
 }
 .carousel-caption a {
-	text-transform: uppercase;
-	background: #262626;
-	padding: 10px 30px;
-	display: inline-block;
-	color: #fff;
-	margin-top: 15px;
+  text-transform: uppercase;
+  background: transparent;
+  border: 2px solid white;
+  padding: 0px 30px;
+  display: inline-block;
+  font-family: merienda;
+  color: #fff;
+  margin-top: 15px;
+  text-decoration: none;
 }
 
+.carousel-caption a:hover{
+	background-color: rgb(216, 11, 11);
+	color: #fff;
 
+}
 
 
 .animated .bounceInRight {
