--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -6,15 +6,30 @@
   display: flex;
   overflow: hidden;
   position: relative;
+  text-transform: uppercase;
   background-blend-mode: darken;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 
+.con-4:after{
+   background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
+    background-position: left-bottom;
+    background-repeat: repeat-x;
+    background-size: 32px 32px;
+    content: " ";
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 32px;
+}
+
 .con-4 h1 {
   color: tomato;
   font-weight: bold;
   font-size:50px;
-  font-family:Poppins;
+ 
 }
