--- a/src/components/ImageSlider/slide.scss
+++ b/src/components/ImageSlider/slide.scss
@@ -1,70 +1,85 @@
 $Raleway: 'Raleway',
 sans-serif;
-.slider-title{
+.con-9:after {
+    background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
+    background-position: left-bottom;
+    background-repeat: repeat-x;
+    background-size: 32px 32px;
+    content: " ";
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 32px;
+}
+
+.slider-title {
     font-size: 5vw;
+    margin-top: 207px;
     color: tomato;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 2vw;
+    
 }
 
-.card-wrapper{
+.card-wrapper {
     position: relative;
     width: 100%;
     padding: 0 10px;
     box-sizing: border-box;
-    &:active,&:hover,&:focus{
-        outline:none;
+    &:active,
+    &:hover,
+    &:focus {
+        outline: none;
         border: none;
-    } 
+    }
 }
 
-.card{
-
+.card {
     width: 100%;
-    height: 400px;
+    height: 350px;
     border-radius: 16px;
     overflow: hidden;
     cursor: pointer;
     position: relative;
-        .card-image{
-            position:absolute;
-            top:0;
-            left: 0;
+    .card-image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        background-color: #000;
+        transition: .5s;
+        img {
             width: 100%;
             height: 100%;
-            z-index:2;
-            background-color: #000;
+            object-fit: cover;
+        }
+    }
+    &:hover {
+        img {
+            opacity: .4s;
             transition: .5s;
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
         }
-        &:hover{
-            img{
-                opacity: .4s;
-                transition: .5s;
-            }
-            .card-image{
-                transform: translateY(-100px);
-                transition: all .4s;
-            }
+        .card-image {
+            transform: translateY(-100px);
+            transition: all .4s;
         }
-
+    }
 }
 
-.social-icon{
+.social-icon {
     position: absolute;
-    top:50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50% , -50%);
+    transform: translate(-50%, -50%);
     z-index: 3;
     display: flex;
-    li{
+    li {
         list-style: none;
-        a{
+        a {
             position: relative;
             display: block;
             width: 50px;
@@ -83,47 +98,46 @@ sans-serif;
     }
 }
 
-
-.card:hover{
-        .social-icon li a{
-            transform: translateY(0);
-            opacity: 1;
-        }
+.card:hover {
+    .social-icon li a {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
-.social-icon li a:hover{
-background: #000;
-transition: .2s;
-.s{
-    color: #fff;
-}
-}
-
-
-
-.social-icon li a .s{
- transition: .4s;
- &:hover{
-     transform: rotateY(360deg);
-     color: #fff;
- }
+.social-icon li a:hover {
+    background: #000;
+    transition: .2s;
+    .s {
+        color: #fff;
+    }
 }
 
-.card:hover li:nth-child(1) a{
-    transition-delay: .1s ;
-}
-.card:hover li:nth-child(2) a{
-    transition-delay: .2s ;
-}
-.card:hover li:nth-child(3) a{
-    transition-delay: .3s ;
-}
-.card:hover li:nth-child(4) a{
-    transition-delay: .4s ;
+.social-icon li a .s {
+    transition: .4s;
+    &:hover {
+        transform: rotateY(360deg);
+        color: #fff;
+    }
 }
 
+.card:hover li:nth-child(1) a {
+    transition-delay: .1s;
+}
 
-.details{
+.card:hover li:nth-child(2) a {
+    transition-delay: .2s;
+}
+
+.card:hover li:nth-child(3) a {
+    transition-delay: .3s;
+}
+
+.card:hover li:nth-child(4) a {
+    transition-delay: .4s;
+}
+
+.details {
     position: absolute;
     bottom: 400px;
     left: 0;
@@ -133,13 +147,11 @@ transition: .2s;
     z-index: 1;
     padding: 10px;
     transition: .6s;
-
-
-    h2{
+    h2 {
         margin: 30px 0;
         padding: 0;
         text-align: center;
-        .job-title{
+        .job-title {
             font-size: 16px;
             line-height: 2;
             color: #333;
@@ -147,25 +159,24 @@ transition: .2s;
             display: block;
         }
     }
-
 }
 
-.card:hover{
-    .details{
+.card:hover {
+    .details {
         bottom: 0;
     }
 }
 
-.carousel{
-  .slicks-dots{
-      bottom: 20vw;
-      li{
-            button{
+.carousel {
+    .slicks-dots {
+        bottom: 20vw;
+        li {
+            button {
                 width: 20px;
                 height: 20px;
                 border: 2px solid #000;
                 border-radius: 20px;
-                &:before{
+                &:before {
                     position: absolute;
                     top: 50%;
                     left: 50%;
@@ -177,55 +188,46 @@ transition: .2s;
                     opacity: .5;
                     color: #000;
                     background-color: #000;
-                    transform: translate(-50% ,-50%);
-                    transition: all  .3s  ease-in-out;
+                    transform: translate(-50%, -50%);
+                    transition: all .3s ease-in-out;
                 }
             }
-
             &.slicks-active,
-            &:hover{
-                button{
+            &:hover {
+                button {
                     border-color: tomato;
-                    &:before{
+                    &:before {
                         background-color: tomato;
                         opacity: 1;
                     }
                 }
-    
             }
-      }
-  
-      .slick-prev , .slick-next{
-                    width: 50px;
-                    height: 50px;
-                    background-color: #000;
-                    color: #000;
-      }
-
-            .slick-prev:hover , .slick-prev:focus , .slick-next:hover , .slick-next:focus{
-                color: #000;
-                outline: none;
-                background: #000;
-
-            }
-            .slick-prev:before , .slick-next:before{
-
-
-                color: #000;
-                font-family: $Raleway;
-            }
-
-            .slick-next{
-                right: -55px;
-
-            }
-            .slick-prev{
-                left: -55px;
-                
-            }
-
+        }
+        .slick-prev,
+        .slick-next {
+            width: 50px;
+            height: 50px;
+            background-color: #000;
+            color: #000;
+        }
+        .slick-prev:hover,
+        .slick-prev:focus,
+        .slick-next:hover,
+        .slick-next:focus {
+            color: #000;
+            outline: none;
+            background: #000;
+        }
+        .slick-prev:before,
+        .slick-next:before {
+            color: #000;
+            font-family: $Raleway;
+        }
+        .slick-next {
+            right: -55px;
+        }
+        .slick-prev {
+            left: -55px;
+        }
     }
-
-
-
 }
