--- a/src/components/Packages/special.scss
+++ b/src/components/Packages/special.scss
@@ -1,16 +1,27 @@
-$Raleway: 'Raleway',
-sans-serif;
 .con-2 {
     display: block;
     width: 100%;
-    height: 600px;
+    height: 650px;
     overflow: hidden;
-    font-family: $Raleway;
     position: relative;
-    background: rgba(0, 0, 0, 0.4)url(../../assets/images/promo_slide_3.jpg);
+    background: rgba(0, 0, 0, 0.8)url(../../assets/images/promo_slide_3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: darken;
+}
+
+.con-2:after {
+    background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
+    background-position: left-bottom;
+    background-repeat: repeat-x;
+    background-size: 32px 32px;
+    content: " ";
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 32px;
 }
 
 .btn-3 {
@@ -26,11 +37,13 @@ sans-serif;
 }
 
 .slider-title-1 {
-    font-size: 5vw;
+    font-size: 55px;
     color: #fff;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 2vw;
+    margin-top: 5vw;
+    font-family: merienda;
+    color: rgb(226, 29, 29)
 }
 
 .card-wrap {
@@ -40,10 +53,10 @@ sans-serif;
 }
 
 .con-right:hover {
-    background: rgb(230, 120, 120);
+    background: rgb(219, 38, 38);
     background-blend-mode: darken;
     color: #fff;
-    transition: all ease-in-out 2s;
+    transition: all ease-in-out 1s;
 }
 
 .img-left {
