--- a/src/components/Story/story.css
+++ b/src/components/Story/story.css
@@ -1,17 +1,34 @@
 .con-1 {
   width: 100%;
-  height: 500px;
+  height: 350px;
   background: url(../../assets/images/story_1.png);
   background-repeat: no-repeat;
   background-size: cover;
- 
+  background-position: center;
+  overflow: hidden;
+  position: relative;
+  display: block;
+  
+}
+.con-1:after{
+   background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
+    background-position: left-bottom;
+    background-repeat: repeat-x;
+    background-size: 32px 32px;
+    content: " ";
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 32px;
 }
 
-.con-1 h1 {
-  font-family: poppins;
-  text-align: center;
-  padding: 20px;
 
+.con-1 h1 {
+  font-family: merienda;
+  text-align: center;
+ padding-bottom: 15px;
   font-size: 60px;
 }
 
@@ -20,19 +37,32 @@
   width: 50%;
   text-align: center;
   padding-left: 15px;
-  font-family: poppins;
-
-  font-size: 18px;
-
-  font-weight: bold;
+  font-family: merienda;
+  font-size: 15px;
+  padding-left: 25px;
+  
 }
+
+.left-1 span{
+  font-size: 60px;
+}
+
 .right-1 {
   float: right;
   width: 50%;
   text-align: center;
   padding-right: 15px;
+  font-family: merienda;
+  font-size: 15px;
+  
+}
 
-  font-family: poppins;
-  font-size: 18px;
-  font-weight: bold;
+
+.img1{
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  margin-top: 160px;
+  
+  
 }
