--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,11 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-    background: #ffffff;
-    font-family: 'Montserrat', sans-serif;
-    overflow-x: hidden;
+
+  font-family: merienda;
+
+  overflow-x: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: sans-serif, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
