--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -10,6 +10,7 @@
   background-blend-mode: darken;
   align-items: center;
   justify-content: center;
+  font-family: Dancing Script;
   flex-direction: column;
 }
 
