--- a/src/components/ImageSlider/slide.scss
+++ b/src/components/ImageSlider/slide.scss
@@ -18,9 +18,9 @@ sans-serif;
     font-size: 5vw;
     margin-top: 207px;
     color: tomato;
+    font-family: Dancing Script;
     text-transform: uppercase;
     text-align: center;
-    
 }
 
 .card-wrapper {
