--- a/src/components/Packages/special.scss
+++ b/src/components/Packages/special.scss
@@ -42,7 +42,7 @@
     text-transform: uppercase;
     text-align: center;
     margin-top: 5vw;
-    font-family: merienda;
+    font-family: Dancing Script;
     color: rgb(226, 29, 29)
 }
 
