--- a/src/components/Carousels/carousel.css
+++ b/src/components/Carousels/carousel.css
@@ -23,9 +23,10 @@
 .carousel-caption h5 {
   font-size: 55px;
   text-transform: uppercase;
+  font-family: Dancing Script;
   letter-spacing: 2px;
   margin-top: 25px;
-  font-family: merienda;
+  
 }
 .carousel-caption h4 {
   font-size: 37px;
