--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -57,7 +57,7 @@
 .navbar-nav a {
   font-size: 15px;
   text-transform: uppercase;
-  font-weight: 300;
+  font-weight: bold;
 }
 .navbar-light .navbar-brand {
   color: #fff;
