--- a/src/components/Story/story.css
+++ b/src/components/Story/story.css
@@ -26,7 +26,7 @@
 
 
 .con-1 h1 {
-  font-family: merienda;
+ font-family: Dancing Script;
   text-align: center;
  padding-bottom: 15px;
   font-size: 60px;
