--- a/src/components/ImageSlider/slide.scss
+++ b/src/components/ImageSlider/slide.scss
@@ -1,32 +1,32 @@
-$Raleway: 'Raleway',
-sans-serif;
-.con-9:after {
-    background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
-    background-position: left-bottom;
-    background-repeat: repeat-x;
-    background-size: 32px 32px;
-    content: " ";
-    display: block;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    height: 32px;
-}
-
-.slider-title {
-    font-size: 5vw;
-    margin-top: 207px;
-    color: tomato;
-    font-family: Dancing Script;
-    text-transform: uppercase;
-    text-align: center;
-}
-
+// $Raleway: 'Raleway',
+// sans-serif;
+// .con-9:after {
+// background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
+// background-position: left-bottom;
+// background-repeat: repeat-x;
+// background-size: 32px 32px;
+// content: " ";
+// display: block;
+// position: absolute;
+// bottom: 0px;
+// left: 0px;
+// width: 100%;
+// height: 32px;
+// }
+// 
+// .slider-title {
+// font-size: 5vw;
+// margin-top: 207px;
+// color: tomato;
+// font-family: Dancing Script;
+// text-align: center;
+// }
+// 
 .card-wrapper {
     position: relative;
     width: 100%;
     padding: 0 10px;
+    margin-top: 20px;
     box-sizing: border-box;
     &:active,
     &:hover,
@@ -36,198 +36,301 @@ sans-serif;
     }
 }
 
-.card {
+// 
+// .card {
+// width: 100%;
+// height: 350px;
+// border-radius: 16px;
+// overflow: hidden;
+// cursor: pointer;
+// position: relative;
+// .card-image {
+// position: absolute;
+// top: 0;
+// left: 0;
+// width: 100%;
+// height: 100%;
+// z-index: 2;
+// background-color: #000;
+// transition: .5s;
+// img {
+// width: 100%;
+// height: 100%;
+// object-fit: cover;
+// }
+// }
+// &:hover {
+// img {
+// opacity: .4s;
+// transition: .5s;
+// }
+// .card-image {
+// transform: translateY(-100px);
+// transition: all .4s;
+// }
+// }
+// }
+// 
+// .card-1{
+// height: 300px;
+// width: 100%;
+// 
+// }
+// 
+// 
+// .social-icon {
+// position: absolute;
+// top: 50%;
+// left: 50%;
+// transform: translate(-50%, -50%);
+// z-index: 3;
+// display: flex;
+// li {
+// list-style: none;
+// a {
+// position: relative;
+// display: block;
+// width: 50px;
+// height: 50px;
+// line-height: 50px;
+// text-align: center;
+// background: #ffff;
+// font-size: 23px;
+// color: #333;
+// font-weight: bold;
+// margin: 0 6px;
+// transition: .4s;
+// transform: translateY(200px);
+// opacity: 0;
+// }
+// }
+// }
+// 
+// .card:hover {
+// .social-icon li a {
+// transform: translateY(200px);
+// opacity: 1;
+// }
+// }
+// 
+// .social-icon li a:hover {
+// background: #000;
+// transition: .2s;
+// .s {
+// color: #fff;
+// }
+// }
+// 
+// .social-icon li a .s {
+// transition: .4s;
+// &:hover {
+// transform: rotateY(360deg);
+// color: #fff;
+// }
+// }
+// 
+// .card:hover li:nth-child(1) a {
+// transition-delay: .1s;
+// }
+// 
+// .card:hover li:nth-child(2) a {
+// transition-delay: .2s;
+// }
+// 
+// .card:hover li:nth-child(3) a {
+// transition-delay: .3s;
+// }
+// 
+// .card:hover li:nth-child(4) a {
+// transition-delay: .4s;
+// }
+// 
+// .details {
+// position: absolute;
+// bottom: 400px;
+// left: 0;
+// background: #fff;
+// width: 100%;
+// height: 120px;
+// z-index: 1;
+// padding: 10px;
+// transition: .6s;
+// h2 {
+// margin: 30px 0;
+// padding: 0;
+// text-align: center;
+// .job-title {
+// font-size: 16px;
+// line-height: 2;
+// color: #333;
+// font-weight: 300;
+// display: block;
+// }
+// }
+// }
+// 
+// .card:hover {
+// .details {
+// bottom: 0;
+// }
+// }
+// 
+// .carousel {
+// .slicks-dots {
+// bottom: 20vw;
+// li {
+// button {
+// width: 20px;
+// height: 20px;
+// border: 2px solid #000;
+// border-radius: 20px;
+// &:before {
+// position: absolute;
+// top: 50%;
+// left: 50%;
+// width: 10px;
+// height: 10px;
+// border-radius: 10px;
+// content: "";
+// text-align: center;
+// opacity: .5;
+// color: #000;
+// background-color: #000;
+// transform: translate(-50%, -50%);
+// transition: all .3s ease-in-out;
+// }
+// }
+// &.slicks-active,
+// &:hover {
+// button {
+// border-color: tomato;
+// &:before {
+// background-color: tomato;
+// opacity: 1;
+// }
+// }
+// }
+// }
+// .slick-prev,
+// .slick-next {
+// width: 50px;
+// height: 50px;
+// background-color: #000;
+// color: #000;
+// }
+// .slick-prev:hover,
+// .slick-prev:focus,
+// .slick-next:hover,
+// .slick-next:focus {
+// color: #000;
+// outline: none;
+// background: #000;
+// }
+// .slick-prev:before,
+// .slick-next:before {
+// color: #000;
+// font-family: $Raleway;
+// }
+// .slick-next {
+// right: -55px;
+// }
+// .slick-prev {
+// left: -55px;
+// }
+// }
+// }
+.con-9 {
     width: 100%;
-    height: 350px;
-    border-radius: 16px;
-    overflow: hidden;
-    cursor: pointer;
-    position: relative;
-    .card-image {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 2;
-        background-color: #000;
-        transition: .5s;
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-    &:hover {
-        img {
-            opacity: .4s;
-            transition: .5s;
-        }
-        .card-image {
-            transform: translateY(-100px);
-            transition: all .4s;
-        }
-    }
+    height: 600px;
 }
 
-.social-icon {
+.slider-title {
+    font-size: 5vw;
+    color: tomato;
+    font-family: Dancing Script;
+    text-align: center;
+}
+
+.img__description {
+    height: 85%;
+    width: 80%;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 3;
+    top: -16px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(54, 55, 56, 0.72);
+    color: #fff;
+    visibility: hidden;
+    opacity: 0;
     display: flex;
+    flex-direction: column;
+    align-items: right;
+    justify-content: right;
+    /* transition effect. not necessary */
+    transition: opacity 0.2s, visibility 0.2s;
+    /* transition effect. not necessary */
+}
+
+.img__wrap:hover .img__description {
+    visibility: visible;
+    opacity: 1;
+}
+
+.img__description {
+    transition: 0.2s;
+    transform: translatex(1em);
+}
+
+.img__wrap:hover .img__description {
+    transform: translateY(0);
+}
+
+.chef-social {
+    height: "15%";
+    background: none;
+    display: grid;
+    grid-row-gap: 2em;
+    top: auto;
+    padding-top: 2em;
+    padding-right: 1em;
+    justify-content: right;
     li {
         list-style: none;
-        a {
-            position: relative;
-            display: block;
-            width: 50px;
-            height: 50px;
-            line-height: 50px;
+        &:hover {
+            background: tomato;
+            cursor: pointer;
+        }
+    }
+}
+
+.chef-section {
+    .redimg {
+        width: 20%;
+    }
+    div {
+        // flex-basis: 32%;
+        display: inline-block;
+        margin-top: 1.5em;
+        // justify-content: space-between;
+    }
+    figure {
+        margin: 0.3em;
+        position: relative;
+        figcaption {
+            margin-top: 1em;
+        }
+        .name {
             text-align: center;
-            background: #ffff;
-            font-size: 23px;
-            color: #333;
+            font-size: 14px;
+            margin-right: 60px;
             font-weight: bold;
-            margin: 0 6px;
-            transition: .4s;
-            transform: translateY(200px);
-            opacity: 0;
         }
-    }
-}
-
-.card:hover {
-    .social-icon li a {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-.social-icon li a:hover {
-    background: #000;
-    transition: .2s;
-    .s {
-        color: #fff;
-    }
-}
-
-.social-icon li a .s {
-    transition: .4s;
-    &:hover {
-        transform: rotateY(360deg);
-        color: #fff;
-    }
-}
-
-.card:hover li:nth-child(1) a {
-    transition-delay: .1s;
-}
-
-.card:hover li:nth-child(2) a {
-    transition-delay: .2s;
-}
-
-.card:hover li:nth-child(3) a {
-    transition-delay: .3s;
-}
-
-.card:hover li:nth-child(4) a {
-    transition-delay: .4s;
-}
-
-.details {
-    position: absolute;
-    bottom: 400px;
-    left: 0;
-    background: #fff;
-    width: 100%;
-    height: 120px;
-    z-index: 1;
-    padding: 10px;
-    transition: .6s;
-    h2 {
-        margin: 30px 0;
-        padding: 0;
-        text-align: center;
-        .job-title {
-            font-size: 16px;
-            line-height: 2;
-            color: #333;
-            font-weight: 300;
-            display: block;
-        }
-    }
-}
-
-.card:hover {
-    .details {
-        bottom: 0;
-    }
-}
-
-.carousel {
-    .slicks-dots {
-        bottom: 20vw;
-        li {
-            button {
-                width: 20px;
-                height: 20px;
-                border: 2px solid #000;
-                border-radius: 20px;
-                &:before {
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    width: 10px;
-                    height: 10px;
-                    border-radius: 10px;
-                    content: "";
-                    text-align: center;
-                    opacity: .5;
-                    color: #000;
-                    background-color: #000;
-                    transform: translate(-50%, -50%);
-                    transition: all .3s ease-in-out;
-                }
-            }
-            &.slicks-active,
-            &:hover {
-                button {
-                    border-color: tomato;
-                    &:before {
-                        background-color: tomato;
-                        opacity: 1;
-                    }
-                }
-            }
-        }
-        .slick-prev,
-        .slick-next {
-            width: 50px;
-            height: 50px;
-            background-color: #000;
-            color: #000;
-        }
-        .slick-prev:hover,
-        .slick-prev:focus,
-        .slick-next:hover,
-        .slick-next:focus {
-            color: #000;
-            outline: none;
-            background: #000;
-        }
-        .slick-prev:before,
-        .slick-next:before {
-            color: #000;
-            font-family: $Raleway;
-        }
-        .slick-next {
-            right: -55px;
-        }
-        .slick-prev {
-            left: -55px;
+        .desc {
+            font-size: 13px;
+            text-align: center;
+            margin-right: 60px;
+     
         }
     }
 }
