--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,31 +1,11 @@
-.Up-1 {
-  background: rgba(0, 0, 0, 0.9) url(../../assets/images/promo_slide_1.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-blend-mode: darken;
-  display: flex;
-  justify-content: space-around;
-  align-items: space-around;
-  color: #fff;
-}
-
-.btn-2 {
-  margin-left: 80px;
-  color: white;
-  background-color: tomato;
-  cursor: pointer;
-  border: 2px solid gray;
-}
-
-.btn-2:hover {
-  background-color: #fff;
-  color: tomato;
-}
 
 .navbar {
   background: rgba(0, 0, 0, 0.2);
   background-blend-mode: darken;
-  height: 110px;
+  background: rgba(0, 0, 0, 0.1) url(../../assets/images/promo_slide_1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height:85x;
 }
 
 .active-1:after{
@@ -46,11 +26,10 @@
 
 
 .active-1{
-  background: #df0b0b;
+  background:red;
   height: 100px;
+   box-sizing: border-box;
 }
-
-
 
 
 
@@ -93,7 +72,7 @@
 }
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #000;
+  color: red;
 }
 .w-100 {
   height: 100vh;
