--- a/src/components/Food/image.scss
+++ b/src/components/Food/image.scss
@@ -113,15 +113,14 @@ img {
         margin-right: 1em;
     }
     .m0p0 {
-        text-align: left;
-        margin: 0;
-        padding: 0;
+        text-align: center;
+        padding: 0px;
+        margin: 0px;
     }
     .items-ul {
-    
-        margin-left: 1em;
+        padding: 0px;
+        margin: 0px;
         column-count: 3;
         font-size: 14px;
     }
-  
 }
