--- a/src/components/Carousels/carousel.css
+++ b/src/components/Carousels/carousel.css
@@ -59,6 +59,12 @@
 
 }
 
+.new-1{
+  background-image: url(../../assets/images/promo_slide_3.jpg);
+}
+
+
+
 
 .animated .bounceInRight {
   animation-delay: 4s;
