--- a/src/components/Blog/blog.css
+++ b/src/components/Blog/blog.css
@@ -1,6 +1,6 @@
 .con-6 {
   display: block;
-  height: 900px;
+  height: 780px;
   overflow: hidden;
   position: relative;
   background: rgba(0, 0, 0, 0.6) url(../../assets/images/promo_slide_3.jpg);
@@ -9,8 +9,9 @@
   background-blend-mode: darken;
 }
 
-.slider-title{
+.slider-title {
   font-family: Dancing Script;
+  color: #ca3d26;
 }
 
 .con-6:after {
@@ -29,19 +30,18 @@
 }
 
 .con-6 h1 {
-  margin-top: 32px;
+  margin-top: 60px;
 }
 
 .card {
   flex-basis: 33.33333%;
   width: 100%;
   height: 500px;
-  margin: 150px;
+  /* margin: 150px; */
 }
 
 .inner-card {
-  background-color: #fff;
-
+  background-color: transparent;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 .img-wrapper {
@@ -59,20 +59,20 @@
   margin-bottom: 20px;
 }
 .content h1 {
-  font-weight: 900;
-  font-size: 16px;
+  font-size: 20px;
   margin-bottom: 10px;
+  font-family:"Lato", sans-serif;
   text-align: center;
-  color: #444;
+  color: #000;
 }
 .content p {
   font-size: 14px;
   line-height: 1.5;
-  color: #555;
+  color: #000;
 }
 .content span {
   float: right;
-  margin-right: 20px;
+  margin-right: 60px;
 }
 .btn-wrapper {
   display: block;
@@ -91,6 +91,14 @@
   box-shadow: 0 3px 6px rgba(223, 14, 14, 0.4);
   background-color: #fff;
   color: rgb(226, 17, 17);
+}
+
+.hr {
+  height: 2px;
+
+  background-color: rgb(221, 55, 13);
+  border: none;
+  width: 20%;
 }
 
 .light-box {
