--- a/src/components/BookTable/book.css
+++ b/src/components/BookTable/book.css
@@ -1,7 +1,7 @@
 .con-3 {
   width: 100%;
-  height: 300px;
-  background :rgba(0, 0, 0, 0.9)url(../../assets/images/promo_slide_1.jpg);
+  height: 450px;
+  background :rgba(0, 0, 0, 0.7)url(../../assets/images/promo_slide_2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -33,16 +33,17 @@
   font-weight: bold;
 }
 .con-3 button {
-  color: tomato;
-  background-color: white;
-  padding: 5px 25px;
-  font-weight: bold;
-  margin-top: 15px;
-  font-size: 20px;
-  border: 1px solid tomato;
-  cursor: pointer;
+  background: #fff none repeat scroll 0 0;
+    color: #ca3d26;
+    display: inline-block;
+    font-weight: 700;
+    letter-spacing: 4px;
+    margin-top: 20px;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    min-width: 200px;
 }
 .con-3 button:hover {
   color: white;
-  background-color: tomato;
+  background-color: #ca3d26;
 }
