--- a/src/components/Food/image.scss
+++ b/src/components/Food/image.scss
@@ -1,126 +1,224 @@
 .main-heading {
-    color: tomato;
-    font-size: 60px;
+    color: #ca3d26;
     padding: 35px;
     font-family: Dancing Script;
 }
 
-.Item-inside {
-    height: 220px;
-    border-radius: 12px;
-    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+.main-heading h1{
+    font-size: 60px;
 }
 
-.Item-inside:hover img,
-.Item-inside:hover .btn {
-    transform: scale(1.1);
+
+// 
+// .Item-inside {
+// height: 220px;
+// border-radius: 12px;
+// box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+// }
+// 
+// .Item-inside:hover img,
+// .Item-inside:hover .btn {
+// transform: scale(1.1);
+// }
+// 
+// .img-div {
+// padding: 0;
+// }
+// 
+// img {
+// border-top-left-radius: 12px;
+// border-bottom-left-radius: 12px;
+// object-fit: cover;
+// transition: all 0.3s ease-in-out;
+// }
+// 
+// .img-fluid {
+// height: 220px;
+// }
+// 
+// .main-title h1 {
+// font-size: 25px;
+// font-weight: bold;
+// text-transform: uppercase;
+// }
+// 
+// .price-book-divide h2 {
+// font-size: 20px;
+// font-weight: 400;
+// color: #e01c26;
+// }
+// 
+// .price-book-divide {
+// margin-bottom: 10px;
+// }
+// 
+// .row {
+// margin-right: 0;
+// margin-left: 0px;
+// }
+// 
+// .btn-new-1 {
+// background-color: #d11726;
+// outline: none;
+// border: none;
+// transition: all 0.3s ease-in-out;
+// }
+// 
+// .btn-new-1:hover {
+// background-color: #fff;
+// outline: none;
+// border: 2px solid grey;
+// }
+// 
+// .btn-new {
+// color: grey;
+// border: 2px solid grey;
+// padding: 15px;
+// margin-right: 15px;
+// font-size: 20px;
+// background: white;
+// transform: rotateY(2);
+// transition: all 0.3s ease-in-out;
+// }
+// 
+// .btn-new:hover {
+// background-color: rgb(201, 38, 38);
+// color: white;
+// outline: none;
+// }
+// 
+// .menucard-section {
+// ul {
+// width: 90%;
+// display: block;
+// }
+// li {
+// display: flex;
+// justify-content: space-between;
+// text-align: center;
+// padding: 2em 1em;
+// width: 100%;
+// margin: 0 auto 1em auto;
+// &::before {
+// content: "-";
+// position: absolute;
+// margin-left: -4px;
+// }
+// }
+// h4 {
+// text-align: left;
+// }
+// img {
+// width: 5em;
+// height: 5em;
+// border: 5px solid rgb(158, 158, 158);
+// border-radius: 50%;
+// align-content: left;
+// margin-top: 1.5em;
+// margin-right: 1em;
+// }
+// hr.solid {
+// border-top: 2px solid rgb(223, 222, 222);
+// width: 70%;
+// }
+// .m0p0 {
+// text-align: center;
+// padding: 0px;
+// margin: 0px;
+// }
+// .items-ul {
+// padding: 0px;
+// margin: 0px;
+// column-count: 3;
+// font-size: 14px;
+// }
+// }
+.menus-area {
+    position: relative;
 }
 
-.img-div {
+.menus-area.section-padding {
+    padding-bottom: 60px;
+}
+
+.food-menu-list-menu {
+    margin-bottom: 60px;
+}
+
+.food-menu-list-menu ul {
+    list-style: outside none none;
+    margin: 0;
     padding: 0;
+    text-align: center;
 }
 
-img {
-    border-top-left-radius: 12px;
-    border-bottom-left-radius: 12px;
-    object-fit: cover;
-    transition: all 0.3s ease-in-out;
-}
-
-.img-fluid {
-    height: 220px;
-}
-
-.main-title h1 {
-    font-size: 25px;
-    font-weight: bold;
+.food-menu-list-menu ul li {
+    border: 1px solid;
+    color: #1e1e1f;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 13px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin: 0 2px;
+    padding: 3px 10px;
     text-transform: uppercase;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
 }
 
-.price-book-divide h2 {
+.food-menu-list-menu ul li:hover,
+.food-menu-list-menu ul li.active {
+    background: #ca3d26 none repeat scroll 0 0;
+    border-color: #ca3d26;
+    color: #fff;
+}
+
+.single-menu .single-menu-details {
+    border-bottom: 1px solid #E4E4E4;
+    margin-bottom: 40px;
+    padding-bottom: 40px;
+    padding-left: 140px;
+    position: relative;
+}
+
+.food-menu-img {
+    border-radius: 50%;
+    height: 100px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    width: 100px;
+    -webkit-box-shadow: 0 0 0 10px #ddd;
+    box-shadow: 0 0 0 10px #ddd;
+}
+
+.food-menu-details {
+    color: #1e1e1f;
+    padding: 0;
+    text-align: inherit;
+}
+
+.food-menu-details h3 {
     font-size: 20px;
-    font-weight: 400;
-    color: #e01c26;
+    margin-bottom: 8px;
 }
 
-.price-book-divide {
-    margin-bottom: 10px;
+.food-menu-details p span {
+    display: inline-block;
+    width: 30%;
 }
 
-.row {
-    margin-right: 0;
-    margin-left: 0px;
+.food-menu-details h3 span {
+    color: #ca3d26;
+    float: right;
 }
 
-.btn-new-1 {
-    background-color: #d11726;
-    outline: none;
-    border: none;
-    transition: all 0.3s ease-in-out;
+.menu-speacification {
+    margin-bottom: 0;
 }
 
-.btn-new-1:hover {
-    background-color: #fff;
-    outline: none;
-    border: 2px solid grey;
-}
-
-.btn-new {
-    color: grey;
-    border: 2px solid grey;
-    padding: 15px;
-    margin-right: 15px;
-    font-size: 20px;
-    background: white;
-    transform: rotateY(2);
-    transition: all 0.3s ease-in-out;
-}
-
-.btn-new:hover {
-    background-color: rgb(201, 38, 38);
-    color: white;
-    outline: none;
-}
-
-.menucard-section {
-    ul {
-        width: 90%;
-        display: block;
-    }
-    li {
-        display: flex;
-        justify-content: space-between;
-        text-align: center;
-        padding: 2em 1em;
-        width: 100%;
-        margin: 0 auto 1em auto;
-        &::before {
-            content: "-";
-            position: absolute;
-            margin-left: -4px;
-        }
-    }
-    h4 {
-        text-align: left;
-    }
-    img {
-        width: 5em;
-        height: 5em;
-        border: 5px solid rgb(158, 158, 158);
-        border-radius: 50%;
-        align-content: left;
-        margin-top: 1.5em;
-        margin-right: 1em;
-    }
-    .m0p0 {
-        text-align: center;
-        padding: 0px;
-        margin: 0px;
-    }
-    .items-ul {
-        padding: 0px;
-        margin: 0px;
-        column-count: 3;
-        font-size: 14px;
-    }
+.mix {
+    display: none;
 }
