--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,6 +1,6 @@
 .con-5 {
   width: 100%;
-  height: 400px;
+  height: 550px;
   background: rgba(0, 0, 0, 0.7) url(../../assets/images/footer.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -8,8 +8,6 @@
   position: relative;
   background-blend-mode: darken;
 }
-
-
 
 .logo {
   display: flex;
@@ -22,43 +20,42 @@
 .logo p {
   color: rgb(216, 42, 42);
   font-size: 18px;
-  font-weight: 300;
 }
 
-.logo h5{
-   color: white;
-  font-weight: 300;
+.logo h5 {
+  color: white;
 }
-
-
 
 .icon {
   display: flex;
   justify-content: center;
-align-items: center;
+  align-items: center;
   color: white;
-  font-weight: 300;
+
+  margin-top: 55px;
 }
- .a{
+.a {
   padding: 0px 10px;
 }
 
-
-
-.left-con{
+.left-con {
   float: left;
   width: 50%;
-  color :rgb(216, 22, 22);
-  font-weight: 300;
-  padding-left: 25px;
-   font-weight: 300;
+  color: rgb(216, 22, 22);
 
+  padding-left: 45px;
+
+  margin-top: 50px;
 }
-.right-con{
+.right-con {
   float: right;
-  padding-right: 25px;
-  color :rgb(216, 18, 18);
-  font-weight: 300;
-   font-weight: 300;
+  padding-right: 45px;
+  color: rgb(216, 18, 18);
 
+  margin-top: 50px;
+}
+
+.bottom {
+  border-bottom: 1px solid #323f45;
+  margin-top: 85px;
 }
