--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,14 +1,4 @@
-
-.navbar {
-  background: rgba(0, 0, 0, 0.2);
-  background-blend-mode: darken;
-  background: rgba(0, 0, 0, 0.1) url(../../assets/images/promo_slide_1.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height:85x;
-}
-
-.active-1:after{
+.active-1:after {
     background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
     background-position: left-bottom;
     background-repeat: repeat-x;
@@ -20,69 +10,120 @@
     left: 0px;
     width: 100%;
     height: 32px;
-
 }
 
-
-
-.active-1{
-  background:red;
-  height: 100px;
-   box-sizing: border-box;
+.active-1 {
+    background: rgb(10, 10, 10);
 }
-
-
 
 .navbar-nav a {
-  font-size: 15px;
-  text-transform: uppercase;
-  font-weight: bold;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 0px 5px;
+    color: #000;
 }
+
 .navbar-light .navbar-brand {
-  color: #fff;
-  font-size: 25px;
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 2px;
+    color: #fff;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 4px;
 }
-.navbar-light .navbar-nav .active > .nav-link,
+
+.navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
-.navbar-light .navbar-nav .show > .nav-link {
-  color: #fff;
+.navbar-light .navbar-nav .show>.nav-link {
+    color: #fff;
 }
+
 .navbar-light .navbar-nav .nav-link {
-  color: #fff;
+    color: #fff;
 }
+
 .navbar-nav {
-  text-align: center;
+    text-align: center;
 }
+
 .nav-link {
-  padding: 0.2rem 1rem;
+    padding: 0.2rem 1rem;
 }
+
 .nav-link.active,
 .nav-link:focus {
-  color: #fff;
+    color: #fff;
 }
+
 .navbar-toggler {
-  padding: 1px 5px;
-  font-size: 18px;
-  line-height: 0.3;
-  background: #fff;
+    padding: 1px 5px;
+    font-size: 18px;
+    line-height: 0.3;
+    background: #fff;
 }
+
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-  color: red;
+    color: #ca3d26;
 }
+
 .w-100 {
-  height: 100vh;
+    height: 100vh;
 }
+
 @media only screen and (max-width: 767px) {
-  .navbar-nav.ml-auto {
-    background: rgba(0, 0, 0, 0.5);
-  }
-  .navbar-nav a {
-    font-size: 14px;
-    font-weight: normal;
-  }
+    .navbar-nav.ml-auto {
+        background: rgba(0, 0, 0, 0.5);
+    }
+    .navbar-nav a {
+        font-size: 14px;
+        font-weight: normal;
+    }
+}
+
+.carousel-item {
+    height: 100vh;
+    min-height: 200px;
+}
+
+.carousel-inner {
+    overflow: hidden;
+    position: relative;
+}
+
+.carousel-item {
+    background: rgba(0, 0, 0, 0.5)url(../../assets/images/promo_slide_3.jpg);
+    background-blend-mode: darken;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.carousel-caption h4 {
+    font-size: 80px;
+    letter-spacing: 3px;
+    font-family: Dancing Script;
+    font-weight: bold;
+}
+
+.carousel-caption p {
+    width: 60%;
+    font-size: 30px;
+    line-height: 1.9;
+}
+
+.carousel-caption a {
+    text-transform: uppercase;
+    background: transparent;
+    letter-spacing: 4px;
+    display: inline-block;
+    color: #fff;
+    font-size: 15px;
+}
+
+hr {
+    height: 0.5px;
+    background-color: #ccc;
+    border: none;
 }
