--- a/src/components/Story/story.css
+++ b/src/components/Story/story.css
@@ -1,6 +1,6 @@
 .con-1 {
   width: 100%;
-  height: 400px;
+  height: 500px;
   background: url(../../assets/images/story_1.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -8,43 +8,37 @@
   overflow: hidden;
   position: relative;
   display: block;
-  
 }
-.con-1:after{
-   background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
-    background-position: left-bottom;
-    background-repeat: repeat-x;
-    background-size: 32px 32px;
-    content: " ";
-    display: block;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    height: 32px;
+.con-1:after {
+  background: linear-gradient(-45deg, #ffffff 16px, transparent 0),
+    linear-gradient(45deg, #ffffff 16px, transparent 0);
+  background-position: left-bottom;
+  background-repeat: repeat-x;
+  background-size: 32px 32px;
+  content: " ";
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 32px;
 }
-
 
 .con-1 h1 {
- font-family: Dancing Script;
+  font-family: Dancing Script;
   text-align: center;
-color: tomato;
- padding-bottom:50px;
-  font-size: 60px;
+  color: #ca3d26;
+  margin-top: 60px;
+  padding-bottom: 50px;
+  font-size: 80px;
 }
 
 .left-1 {
-  float: left;
-  width: 50%;
-  text-align: center;
-  padding-left: 15px;
-  font-size: 15px;
-  padding-left:155px;
-
-}
-
-.left-1 span{
-  font-size: 60px;
+  vertical-align: middle;
+  margin: 3em 8em;
+  column-count: 2;
+  column-gap: 50px;
+  text-align: left;
 }
 
 .Right-1 {
@@ -53,25 +47,21 @@ color: tomato;
   text-align: center;
   padding-right: 155px;
   font-size: 15px;
-  
 }
 
-
-.img1{
+.c-image {
   display: flex;
-  justify-content:center;
   align-items: center;
-  margin-top: 160px;
-  
-  
+  justify-content: center;
+  margin-top: 52px;
+  margin-left: 550px;
 }
-	.left-1:first-letter {
-		float: left;
-		font-size: 45px;
-		line-height: 1;
-		font-weight: bold;
-		margin-right: px;
-		color: black;
-		font-family: "Times New Roman", Times, serif;
-	
-	}
+.left-1:first-letter {
+  float: left;
+  font-size: 45px;
+  line-height: 1;
+  font-weight: bold;
+  margin-right: px;
+  color: black;
+  font-family: "Times New Roman", Times, serif;
+}
